force-app/main/default/objects/CaseSummarySettings__mdt/CaseSummarySettings__mdt.object-meta.xml
<CustomObject>
    <label>Case Summary Setting</label>
    <pluralLabel>Case Summary Settings</pluralLabel>
</CustomObject>