force-app/main/default/objects/CaseSummarySettings__mdt/fields/History_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>History_Record_Limit__c</fullName>
    <label>History Record Limit</label>
    <description>Maximum number of child records fetched per related object type (EmailMessage, CaseComment, Task, FeedItem) per Case. Prevents SOQL row limit proximity on high-volume cases.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>