force-app/main/default/objects/CaseSummarySettings__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Global kill switch for the Case Transfer Intelligence feature. Set to false to disable all summary generation without a code deployment.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>