force-app/main/default/objects/CaseSummarySettings__mdt/fields/Queueable_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Chunk_Size__c</fullName>
    <label>Queueable Chunk Size</label>
    <description>Controls how many Case IDs each Queueable execution processes before self-chaining. Intended default 5-10. Minimum enforced in code: if null or less than 1, fallback to 5.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>