force-app/main/default/objects/CaseSummarySettings__mdt/fields/Recent_Transfer_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Recent_Transfer_Minutes__c</fullName>
    <label>Recent Transfer Minutes</label>
    <description>Number of minutes after a transfer during which the LWC panel auto-expands on load. Used by caseTransferSummaryPanel to determine expanded/collapsed default state.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>